--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
 	<string name="chat_message_my_attach_img_description">my image</string>
 	<string name="description_user_photo">user photo</string>
 	<string name="dialog_match_ed_hint">Write first message…</string>
+	<string name="auth_slogan1">Find new\nfriends nearby</string>
+	<string name="auth_slogan2">With milions of users\nall around the world</string>
 
 
 </resources>
