--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 18.12.19 19:25
+  ~ Last modified 19.12.19 17:54
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -16,20 +16,24 @@
 	<!--Default strings-->
 	<string name="default_name">John Doe</string>
 	<string name="default_city">Anytown</string>
-	<string name="default_message_text">Alessandr text \n text \n text text</string>
+	<string name="default_message_text">Text text text \n text \n text text</string>
 	<string name="default_message_date">dd/mm/yyyy</string>
 
 	<!--Some UI strings-->
 	<string name="navigation_drawer_open">Open navigation drawer</string>
 	<string name="navigation_drawer_close">Close navigation drawer</string>
-	<string name="progress_dialog_text">Please wait…</string>
 
 	<!--Layouts hardcoded strings-->
-	<string name="activity_auth_facebook_login_button_delegate">Login with Facebook</string>
-	<string name="activity_auth_tv_slogan">Meet new People, Family &amp; Friends</string>
+	<string name="auth_slogan1">Find new\nfriends nearby</string>
+	<string name="auth_slogan2">With millions of users\nall around the world</string>
+	<string name="reg_step_1_tv_select_your_gender">Select your gender</string>
+	<string name="reg_step_2_tv_interested_in">Interested in</string>
+	<string name="reg_step_3_tv_specify_your_age">Specify your age</string>
+	<string name="reg_step_4_tv_change_name">Do you want to change your name?</string>
+	<string name="reg_step_5_tv_choose_city">Choose your city</string>
+	<string name="reg_step_final_tv_check_is_correct">Check if everything is correct</string>
 	<string name="fragment_card_skip_img_description">card skip</string>
 	<string name="fragment_card_like_img_description">card like</string>
-	<string name="fragment_card_item_img_description">card image</string>
 	<string name="fragment_chat_ed_hint">Enter message</string>
 	<string name="fragment_chat_send_img_description">send message</string>
 	<string name="fragment_chat_attach_img_description">send attachment</string>
@@ -38,18 +42,18 @@
 	<string name="chat_message_my_avatar_img_description">my avatar</string>
 	<string name="chat_message_my_attach_img_description">my image</string>
 	<string name="description_user_photo">user photo</string>
-	<string name="dialog_match_ed_hint">Write first message…</string>
 
 
-
-	<string name="auth_slogan1">Find new\nfriends nearby</string>
-	<string name="auth_slogan2">With milions of users\nall around the world</string>
-	<string name="reg_step_1_tv_select_your_gender">Select your gender</string>
-	<string name="reg_step_2_tv_interested_in">Interested in</string>
-	<string name="reg_step_3_tv_specify_your_age">Specify your age</string>
-	<string name="reg_step_4_tv_change_name">Do you want to change your name?</string>
-	<string name="reg_step_5_tv_choose_city">Choose your city</string>
-	<string name="reg_step_final_tv_check_is_correct">Check if everything is correct</string>
+	<!--city list-->
+	<string name="russia_ekb">Екатеринбург</string>
+	<string name="russia_krasnoyarsk">Красноярск</string>
+	<string name="russia_krd">Краснодар</string>
+	<string name="russia_kzn">Казань</string>
+	<string name="russia_msk">Москва</string>
+	<string name="russia_nnv">Нижний Новгород</string>
+	<string name="russia_nsk">Новосибирск</string>
+	<string name="russia_sochi">Сочи</string>
+	<string name="russia_spb">Санкт-Петербург</string>
 
 
 </resources>
