--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 20.01.20 21:17
+  ~ Last modified 27.01.20 16:31
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -54,6 +54,8 @@
 	<string name="russia_nsk">Новосибирск</string>
 	<string name="russia_sochi">Сочи</string>
 	<string name="russia_spb">Санкт-Петербург</string>
+
+	<string name="default_notification_channel_id">chat_notifications</string>
 
 
 
