--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 06.03.20 15:47
+  ~ Last modified 12.03.20 16:32
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -79,6 +79,7 @@
 	<string name="genderMale">male</string>
 	<string name="genderEveryone">everyone</string>
 	<string name="genderFemale">female</string>
+	<string name="toast_update_success">Successfully updated</string>
 
 
 </resources>
