--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 20.03.20 16:29
+  ~ Last modified 23.03.20 18:32
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -16,7 +16,7 @@
 	<!--Default strings-->
 	<string name="default_name">John Doe</string>
 	<string name="default_city">Anytown</string>
-	<string name="default_message_text">Text text text \n text \n text text maybe more text to test well</string>
+	<string name="default_message_text">Text another text \n text \n more text maybe more text to test well</string>
 	<string name="default_message_date">hh:mm</string>
 
 	<!--Some UI strings-->
@@ -26,14 +26,27 @@
 	<!--Layouts hardcoded strings-->
 	<string name="auth_slogan1">Find new\nfriends nearby</string>
 	<string name="auth_slogan2">With millions of users\nall around the world</string>
+	<string name="hint_city">Your city</string>
+	<string name="hint_name">Your name</string>
+	<string name="hint_gender">Your gender</string>
+	<string name="hint_preferred_gender">Interested in</string>
+	<string name="hint_age">Age</string>
+	<string name="default_age_text">18</string>
+	<string name="reg_btn_back_text">Back</string>
+	<string name="btn_done_text">Done</string>
+
 	<string name="reg_step_1_tv_select_your_gender">Select your gender</string>
-	<string name="reg_step_2_tv_interested_in">Interested in</string>
 	<string name="reg_step_3_tv_specify_your_age">Specify your age</string>
 	<string name="reg_step_4_tv_change_name">Do you want to change your name?</string>
 	<string name="reg_step_5_tv_choose_city">Choose your city</string>
 	<string name="reg_step_final_tv_check_is_correct">Check if everything is correct</string>
+
+	<string name="fragment_cards_explanation_text">There is no available users matching your preferences</string>
 	<string name="fragment_card_skip_img_description">card skip</string>
 	<string name="fragment_card_like_img_description">card like</string>
+	<string name="tv_its_a_match">ITS A MATCH!</string>
+	<string name="tv_back_to_swiping">Back to swiping</string>
+
 	<string name="fragment_chat_ed_hint">Enter message</string>
 	<string name="fragment_chat_send_img_description">send message</string>
 	<string name="fragment_chat_attach_img_description">send attachment</string>
@@ -41,8 +54,28 @@
 	<string name="chat_message_sender_attach_img_description">sender_image</string>
 	<string name="chat_message_my_avatar_img_description">my avatar</string>
 	<string name="chat_message_my_attach_img_description">my image</string>
+
+	<string name="fragment_conversations_explanation_text">There is no started conversations…\n\nText someone first!</string>
+	<string name="fragment_pairs_explanation_text">There is no matches…\n\nKeep swiping!</string>
+
 	<string name="description_user_photo">user photo</string>
 
+	<string name="text_max_length_error">Max length reached</string>
+	<string name="text_empty_error">Field must not be empty</string>
+
+	<string name="genderFemale">female</string>
+	<string name="genderEveryone">everyone</string>
+	<string name="genderMale">male</string>
+
+	<string name="toast_text_update_success">Successfully updated</string>
+	<string name="btn_log_in_with_facebook">Log in with Facebook</string>
+	<string name="dialog_error_title">Error</string>
+	<string name="tv_ages_you_prefer">Ages preferences</string>
+	<string name="tv_gender_showing">Showing</string>
+
+	<string name="place_description_header_text">Description</string>
+	<string name="want_to_go_text">Want to go</string>
+	<string name="profile_about_header_text">About me</string>
 
 	<!--city list-->
 	<string name="russia_ekb">Екатеринбург</string>
@@ -74,14 +107,6 @@
 	<string name="permission_read_ext_storage_denied">Please enable READ_EXTERNAL_STORAGE_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
 	<string name="default_profile_about_text">Besides, she’s a got a kind personality and she smiles a lot. All in all, she is rather attractive. People say the same about me, but I think that she is more beautiful than me.</string>
 
-	<string name="text_max_length_error">Max length reached</string>
-	<string name="text_empty_error">Field must not be empty</string>
-	<string name="genderMale">male</string>
-	<string name="genderEveryone">everyone</string>
-	<string name="genderFemale">female</string>
-	<string name="toast_update_success">Successfully updated</string>
-	<string name="log_in_with_facebook">Log in with Facebook</string>
-	<string name="ErrorTitle">Error</string>
 
 
 </resources>
