--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 24.03.20 15:52
+  ~ Last modified 24.03.20 15:58
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -17,7 +17,6 @@
 	<string name="default_name">John Doe</string>
 	<string name="default_city">Anytown</string>
 	<string name="default_message_text">Text another text \n text \n more text maybe more text to test well</string>
-	<string name="default_message_date">hh:mm</string>
 
 	<!--Some UI strings-->
 	<string name="navigation_drawer_open">Open navigation drawer</string>
@@ -107,6 +106,12 @@
 	<string name="permission_read_ext_storage_denied">Please enable READ_EXTERNAL_STORAGE_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
 	<string name="default_profile_about_text">Besides, she’s a got a kind personality and she smiles a lot. All in all, she is rather attractive. People say the same about me, but I think that she is more beautiful than me.</string>
 	<string name="menu_report_text">Report</string>
+	<string name="bottom_navigation_places">Places</string>
+	<string name="bottom_navigation_pairs">Pairs</string>
+	<string name="bottom_navigation_chats">Chats</string>
+	<string name="bottom_navigation_settings">Settings</string>
+	<string name="menu_exit">Exit</string>
+	<string name="menu_dating_preferences">Dating Preferences</string>
 
 
 </resources>
