--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 24.03.20 15:58
+  ~ Last modified 26.03.20 18:17
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -105,13 +105,15 @@
 	<string name="permission_read_ext_storage_explanation">Application needs READ_EXTERNAL_STORAGE_PERMISSION in order to access your gallery. Please allow permission.</string>
 	<string name="permission_read_ext_storage_denied">Please enable READ_EXTERNAL_STORAGE_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
 	<string name="default_profile_about_text">Besides, she’s a got a kind personality and she smiles a lot. All in all, she is rather attractive. People say the same about me, but I think that she is more beautiful than me.</string>
-	<string name="menu_report_text">Report</string>
+
+
 	<string name="bottom_navigation_places">Places</string>
 	<string name="bottom_navigation_pairs">Pairs</string>
 	<string name="bottom_navigation_chats">Chats</string>
 	<string name="bottom_navigation_settings">Settings</string>
 	<string name="menu_exit">Exit</string>
 	<string name="menu_dating_preferences">Dating Preferences</string>
-
+	<string name="menu_unmatch_text">Unmatch</string>
+	<string name="menu_report_text">Report</string>
 
 </resources>
