extract some hardcoded strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 27.03.20 19:00
+  ~ Last modified 27.03.20 19:25
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -117,5 +117,12 @@
 	<string name="menu_dating_preferences">Dating Preferences</string>
 	<string name="menu_unmatch_text">Unmatch</string>
 	<string name="menu_report_text">Report</string>
+
+	<string name="material_dialog_picker_camera">Camera</string>
+	<string name="material_dialog_picker_gallery">Gallery</string>
+
+	<string name="report_chooser_photos">Ineligible photos</string>
+	<string name="report_chooser_behavior">Disrespectful behavior</string>
+	<string name="report_chooser_fake">Seems, it is fake</string>
 
 </resources>
