--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 07.04.20 14:43
+  ~ Last modified 08.04.20 18:49
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -116,5 +116,6 @@
 	<string name="report_chooser_photos">Недопустимые фотографии</string>
 	<string name="report_chooser_behavior">Отвратительное поведение</string>
 	<string name="report_chooser_fake">Похоже на фейк</string>
+	<string name="text_i_agree_privacy_policy">Нажимая эту кнопку Вы соглашаетесь с <u>Политикой конфедециальности</u></string>
 
 </resources>
